--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -1,12 +1,12 @@
 ﻿/* ----- CSS FOR INDEX.HTML ----- */
 body {
-  padding-top: 0px;
+  padding-top: 0;
   padding-bottom: 20px;=
   background-color: #FFF;
 
   font-family: 'PT Sans', sans-serif;
   /*font-family: 'Roboto', sans-serif;*/
-  min-width: 820px;
+  min-width: 1050px;
 }
 
 .preload {
@@ -25,7 +25,7 @@ body {
   width: 100%;
   height: 40px;
   background-color: #1C1B1A;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.8);
+  box-shadow: 0 0 5px 0 rgba(0,0,0,0.8);
   line-height:0;
 }
 
@@ -49,8 +49,7 @@ body {
   height: 20px;
   margin: 10px 20px 0 0;
   padding: 10px 0 0 25px;
-  background-repeat: no-repeat;
-  background-position: 0 0;
+  background: no-repeat 0 0;
   background-size: 20px 20px;
   cursor: pointer;
 }
